@@ -1,4 +1,4 @@
-## $Id: Makefile.am,v 1.207 2008/06/08 22:16:38 c_anthon Exp $
+## $Id: Makefile.am,v 1.208 2008/06/09 07:25:45 c_anthon Exp $
 
 ACLOCAL_AMFLAGS = -I m4
 
@@ -70,6 +70,7 @@ gnubg_SOURCES = \
 		matchid.h \
 		mec.c \
 		mec.h \
+		multithread.c \
 		multithread.h \
 		openurl.c \
 		openurl.h \
@@ -107,10 +108,6 @@ gnubg_SOURCES = \
 		timer.c \
 		util.h \
 		util.c 
-
-if USE_MULTITHREAD
-gnubg_SOURCES +=  multithread.c
-endif
 
 if USE_GTK
 gnubg_SOURCES += gtkboard.c gtkboard.h gtkgame.c gtkgame.h gtkfile.c gtkfile.h \
